fixed header spacing and assembled contact page

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -900,6 +900,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
@@ -940,13 +945,12 @@ video {
   margin-bottom: 6px;
 }
 
-.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-14 {
@@ -979,6 +983,10 @@ video {
 
 .mb-40 {
   margin-bottom: 10rem;
+}
+
+.mb-7 {
+  margin-bottom: 1.75rem;
 }
 
 .ml-10 {
@@ -1015,6 +1023,10 @@ video {
 
 .mt-0 {
   margin-top: 0px;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
 }
 
 .mt-11 {
@@ -1065,12 +1077,20 @@ video {
   display: none;
 }
 
+.h-1\/3 {
+  height: 33.333333%;
+}
+
 .h-10 {
   height: 2.5rem;
 }
 
 .h-12 {
   height: 3rem;
+}
+
+.h-2\/3 {
+  height: 66.666667%;
 }
 
 .h-4 {
@@ -1187,6 +1207,10 @@ video {
 
 .h-\[90\%\] {
   height: 90%;
+}
+
+.h-\[98px\] {
+  height: 98px;
 }
 
 .h-full {
@@ -1359,6 +1383,18 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[180px\] {
+  width: 180px;
+}
+
+.w-\[190px\] {
+  width: 190px;
+}
+
+.w-\[170px\] {
+  width: 170px;
 }
 
 .max-w-6xl {
@@ -1565,6 +1601,11 @@ video {
 
 .bg-white\/\[\.62\] {
   background-color: rgb(255 255 255 / .62);
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1986,6 +2027,10 @@ video {
     margin-bottom: 2.75rem;
   }
 
+  .md\:mb-16 {
+    margin-bottom: 4rem;
+  }
+
   .md\:mb-28 {
     margin-bottom: 7rem;
   }
@@ -2000,6 +2045,10 @@ video {
 
   .md\:mt-5 {
     margin-top: 1.25rem;
+  }
+
+  .md\:mt-4 {
+    margin-top: 1rem;
   }
 
   .md\:block {
@@ -2147,6 +2196,10 @@ video {
     padding-top: 1rem;
   }
 
+  .md\:pt-2 {
+    padding-top: 0.5rem;
+  }
+
   .md\:text-\[14px\] {
     font-size: 14px;
   }
@@ -2229,6 +2282,10 @@ video {
     margin-bottom: 5rem;
   }
 
+  .xl\:mb-24 {
+    margin-bottom: 6rem;
+  }
+
   .xl\:mb-32 {
     margin-bottom: 8rem;
   }
@@ -2255,6 +2312,10 @@ video {
 
   .xl\:block {
     display: block;
+  }
+
+  .xl\:inline {
+    display: inline;
   }
 
   .xl\:flex {
@@ -2345,16 +2406,12 @@ video {
     width: 862px;
   }
 
-  .xl\:grid-cols-\[1fr_40\%_1fr\] {
-    grid-template-columns: 1fr 40% 1fr;
-  }
-
-  .xl\:grid-cols-\[1fr_30\%_1fr\] {
-    grid-template-columns: 1fr 30% 1fr;
-  }
-
   .xl\:grid-cols-\[1fr_1fr_40\%\] {
     grid-template-columns: 1fr 1fr 40%;
+  }
+
+  .xl\:grid-cols-\[1fr_40\%_1fr\] {
+    grid-template-columns: 1fr 40% 1fr;
   }
 
   .xl\:grid-cols-\[40\%_1fr_1fr\] {
@@ -2401,6 +2458,18 @@ video {
 
   .xl\:pt-7 {
     padding-top: 1.75rem;
+  }
+
+  .xl\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .xl\:pt-4 {
+    padding-top: 1rem;
+  }
+
+  .xl\:pt-3 {
+    padding-top: 0.75rem;
   }
 
   .xl\:text-2xl {
